<resources>
    <string name="accordion_collapsed">Collapsed</string>
    <string name="accordion_expanded">Expanded</string>
    <string name="add_button">Add</string>
    <string name="add_deadline_date_button">Add deadline date</string>
    <string name="add_deadline_time_button">Add deadline time</string>
    <string name="add_end_date_button">Add end date</string>
    <string name="add_parent_task_button">Add preceding to-do</string>
    <string name="add_recurrence_button">Does not repeat</string>
    <string name="add_scheduled_at_button">Schedule</string>
    <string name="add_scheduled_time_button">Add scheduled time</string>
    <string name="add_start_after_date_button">Add start after date</string>
    <string name="add_start_after_time_button">Add start after time</string>
    <string name="add_task_button">Add to-do</string>
    <string name="add_tag_button">Add tag</string>
    <string name="advice_body_sensation_intro"><![CDATA[<b>STOP</b>. Take a deep breath. Observe your body sensations]]></string>
    <string name="advice_body_sensation_hungry_button">Hungry</string>
    <string name="advice_body_sensation_other_button">Other</string>
    <string name="advice_body_sensation_pain_button">In pain</string>
    <string name="advice_body_sensation_tired_button">Tired</string>
    <string name="advice_check_the_facts_step1">Name the emotion and rate the intensity</string>
    <string name="advice_check_the_facts_step2">Describe the prompting event</string>
    <string name="advice_check_the_facts_step3">List the possible interpretations</string>
    <string name="advice_check_the_facts_step4">Assess the probability of a threat. List other possible outcomes</string>
    <string name="advice_check_the_facts_step5">Imagine yourself coping with the worst case scenario</string>
    <string name="advice_check_the_facts_step6">If your emotions and their intensity fit the facts, then problem-solve. Otherwise, act opposite to the emotion</string>
    <string name="advice_distress_level_intro">Observe your distress level</string>
    <string name="advice_distress_low_button">Low</string>
    <string name="advice_distress_high_button">High</string>
    <string name="advice_distress_extreme_button">Extreme</string>
    <string name="advice_extreme_distress_intro">If you are in crisis, call 911 or seek medical attention</string>
    <string name="advice_tipp_step1">Dunk your head in cold water</string>
    <string name="advice_tipp_step2">Do an intense exercise</string>
    <string name="advice_tipp_step3">Breath deeply and slowly</string>
    <string name="advice_tipp_step4">Tense and relax your muscles</string>
    <string name="advice_high_distress_suggestion_compassion"><![CDATA[Practice <b>self-compassion</b>]]></string>
    <string name="advice_high_distress_suggestion_day_off"><![CDATA[Plan a <b>day off</b>]]></string>
    <string name="advice_high_distress_suggestion_distract"><![CDATA[Briefly <b>distract</b> yourself from the distressing emotions]]></string>
    <string name="advice_high_distress_suggestion_distract_art"><![CDATA[Express yourself creatively through <b>art</b>]]></string>
    <string name="advice_high_distress_suggestion_distract_clean"><![CDATA[<b>Clean</b> a room in your home]]></string>
    <string name="advice_high_distress_suggestion_distract_friend"><![CDATA[Call/text/video chat/visit a <b>friend</b>. Try to brighten their day or ask them if you can vent]]></string>
    <string name="advice_high_distress_suggestion_distract_gratitude"><![CDATA[Make a list of things you are <b>grateful</b> for]]></string>
    <string name="advice_high_distress_suggestion_distract_read"><![CDATA[<b>Read</b> a book]]></string>
    <string name="advice_high_distress_suggestion_distract_shower"><![CDATA[Take a hot <b>shower</b>]]></string>
    <string name="advice_high_distress_suggestion_distract_sing"><![CDATA[<b>Sing</b> your favorite songs]]></string>
    <string name="advice_high_distress_suggestion_imagery"><![CDATA[<b>Imagine</b> a relaxing scene]]></string>
    <string name="advice_high_distress_suggestion_meds"><![CDATA[Talk to your doctor about a <b>medication</b> adjustment]]></string>
    <string name="advice_high_distress_suggestion_meditate"><![CDATA[<b>Meditate</b> for 1 minute. Focus on your surroundings, breathing, urges, body sensations, feelings, worries, or thoughts]]></string>
    <string name="advice_high_distress_suggestion_move"><![CDATA[<b>Move</b> your body]]></string>
    <string name="advice_high_distress_suggestion_move_backyard">go out to the backyard</string>
    <string name="advice_high_distress_suggestion_move_block">walk around the block</string>
    <string name="advice_high_distress_suggestion_move_dance">dance</string>
    <string name="advice_high_distress_suggestion_move_home">walk around your home</string>
    <string name="advice_high_distress_suggestion_move_library">go to the library</string>
    <string name="advice_high_distress_suggestion_move_stretch">stretch</string>
    <string name="advice_high_distress_suggestion_move_wiggle">wiggle</string>
    <string name="advice_high_distress_suggestion_positive_attributes"><![CDATA[Name 3 of your <b>positive attributes</b>]]></string>
    <string name="advice_hungry_suggestion_snack"><![CDATA[Grab a <b>snack</b>]]></string>
    <string name="advice_low_distress_details_button">Details</string>
    <string name="advice_low_distress_suggestion_body_double"><![CDATA[<b>Body double</b>. Invite a friend to sit with you while you do the task]]></string>
    <string name="advice_low_distress_suggestion_break_down_task"><![CDATA[Be <b>flexible</b> about how much of the task needs to be completed. Do just the first <b>2 minutes</b>]]></string>
    <string name="advice_low_distress_suggestion_journal"><![CDATA[Write in a <b>journal</b>]]></string>
    <string name="advice_low_distress_wise_mind">Observe your thoughts and feelings. Proceed honoring your emotions and thoughts</string>
    <string name="advice_pain_suggestion_bath"><![CDATA[Take a <b>bath</b>]]></string>
    <string name="advice_pain_suggestion_hot_pack"><![CDATA[Use a <b>hot pack</b>]]></string>
    <string name="advice_pain_suggestion_massage"><![CDATA[<b>Massage</b> the area]]></string>
    <string name="advice_pain_suggestion_meds"><![CDATA[Take pain <b>medication</b>]]></string>
    <string name="advice_pain_suggestion_stretch"><![CDATA[<b>Stretch</b> your muscles]]></string>
    <string name="advice_pain_suggestion_tea"><![CDATA[Drink ginger <b>tea</b>]]></string>
    <string name="advice_tired_suggestion_nap"><![CDATA[Take a <b>nap</b>]]></string>
    <string name="advice_title">Advice</string>
    <string name="app_name">Diswantin</string>
    <string name="back_button">Back</string>
    <string name="cancel_button">Cancel</string>
    <string name="child_tasks_label">Next to-dos</string>
    <string name="clear_button">Clear</string>
    <string name="close_button">Close</string>
    <string name="continue_button">Continue</string>
    <string name="discard_confirmation_dialog_confirm_button">Discard</string>
    <string name="discard_confirmation_dialog_dismiss_button">Keep editing</string>
    <string name="discard_confirmation_dialog_text">You have unsaved changes. Do you want to discard the changes?</string>
    <string name="discard_confirmation_dialog_title">Discard changes?</string>
    <string name="current_task_empty">No upcoming to-dos</string>
    <string name="current_task_fetch_error">Something went wrong loading the current to-do</string>
    <string name="current_task_mark_done_button">Done</string>
    <string name="current_task_mark_done_error">Something went wrong marking the to-do as done</string>
    <string name="current_task_skip_error">Something went wrong skipping the to-do</string>
    <string name="current_task_title">To do now</string>
    <string name="current_task_view_details_button">Details</string>
    <string name="due_tasks_fetch_error">Something went wrong loading the to-dos</string>
    <string name="due_tasks_empty">No to-dos due</string>
    <string name="due_today_title">Due today</string>
    <string name="edit_button">Edit</string>
    <string name="end_date_label">End date</string>
    <string name="delete_button">Delete</string>
    <string name="deadline_label">Deadline</string>
    <string name="deadline_date_label">Deadline date</string>
    <string name="deadline_chip_label">Deadline: %1$s-%2$s</string>
    <string name="deadline_time_label">Deadline time</string>
    <string name="done_button">Done</string>
    <string name="done_chip_label_unselected">Marked done</string>
    <string name="done_chip_label_selected">Done: %1$s-%2$s</string>
    <string name="mark_done_button">Mark done</string>
    <string name="more_actions_button">More actions</string>
    <string name="name_label">Name</string>
    <string name="note_label">Note</string>
    <string name="ok_button">OK</string>
    <string name="parent_task_label">Preceding to-do</string>
    <string name="recurrence_chip_label_unselected">Repeats on</string>
    <string name="recurrence_chip_label_selected">Repeats: %1$s</string>
    <string name="recurrence_end">until %1$s</string>
    <plurals name="recurrence_daily">
        <item quantity="one">Daily</item>
        <item quantity="other">Every %1$d days</item>
    </plurals>
    <plurals name="recurrence_day">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <string name="recurrence_label">Repeats</string>
    <plurals name="recurrence_month">
        <item quantity="one">month</item>
        <item quantity="other">months</item>
    </plurals>
    <plurals name="recurrence_monthly_on_day">
        <item quantity="one">Monthly on the %2$s</item>
        <item quantity="other">Every %1$d months on the %2$s</item>
    </plurals>
    <plurals name="recurrence_monthly_on_week">
        <item quantity="one">Monthly on the %2$s %3$s</item>
        <item quantity="other">Every %1$d months on the %2$s %3$s</item>
    </plurals>
    <string name="recurrence_monthly_type_label">Repeats on</string>
    <string name="recurrence_step_label">Every</string>
    <plurals name="recurrence_week">
        <item quantity="one">week</item>
        <item quantity="other">weeks</item>
    </plurals>
    <string name="recurrence_weekday_label">Repeats on</string>
    <plurals name="recurrence_weekly">
        <item quantity="one">Weekly on %2$s</item>
        <item quantity="other">Every %1$d weeks on %2$s</item>
    </plurals>
    <plurals name="recurrence_year">
        <item quantity="one">year</item>
        <item quantity="other">years</item>
    </plurals>
    <plurals name="recurrence_yearly">
        <item quantity="one">Yearly on %2$s</item>
        <item quantity="other">Every %1$d years on %2$s</item>
    </plurals>
    <string name="refresh_button">Refresh</string>
    <string name="remove_button">Remove</string>
    <string name="restart_button">Restart</string>
    <string name="retry_button">Retry</string>
    <string name="save_button">Save</string>
    <string name="scheduled_at_label">Scheduled at</string>
    <string name="scheduled_date_label">Scheduled date</string>
    <string name="scheduled_chip_label">Scheduled: %1$s-%2$s</string>
    <string name="scheduled_time_label">Scheduled time</string>
    <string name="search_tag_options_error">Something went wrong searching for tags</string>
    <string name="skip_button">Skip</string>
    <string name="skip_sheet_confirm_button">Other</string>
    <string name="skip_sheet_dismiss_button">Too hard</string>
    <string name="skip_sheet_title">Skip reason</string>
    <string name="skip_sheet_text">Does it feel like this to-do is too hard or is there some other reason that it can\'t be done today (e.g. not occurring this time, conflicts with another to-do, too late to do it)?</string>
    <string name="start_after_date_label">Start after date</string>
    <string name="start_after_label">Start after</string>
    <string name="start_after_chip_label">Start: %1$s-%2$s</string>
    <string name="start_after_time_label">Start after time</string>
    <string name="start_date_label">Start date</string>
    <string name="tag_detail_delete_error">Something went wrong deleting the tag</string>
    <string name="tag_detail_fetch_error">Something went wrong loading the tag</string>
    <string name="tag_detail_fetch_tasks_error">Something went wrong loading the to-dos</string>
    <string name="tag_form_save_error_edit">Something went wrong editing the tag</string>
    <string name="tag_form_save_error_new">Something went wrong adding the tag</string>
    <string name="tag_form_title_edit">Edit Tag</string>
    <string name="tag_form_title_new">New Tag</string>
    <string name="tag_name_label">Tag name</string>
    <string name="tags_label">Tags</string>
    <string name="tag_list_empty">No tags added</string>
    <string name="tag_list_fetch_error">Something went wrong loading the tags</string>
    <string name="tag_list_title">Tags</string>
    <string name="task_detail_delete_error">Something went wrong deleting the to-do</string>
    <string name="task_detail_fetch_children_error">Something went wrong loading the next to-dos</string>
    <string name="task_detail_fetch_error">Something went wrong loading the to-do</string>
    <string name="task_detail_mark_done_error">Something went wrong marking the to-do as done</string>
    <string name="task_detail_unmark_done_error">Something went wrong unmarking the to-do as done</string>
    <string name="task_name_done">%1$s, done</string>
    <string name="task_form_fetch_tags_error">Something went wrong loading the tags</string>
    <string name="task_form_fetch_error">Something went wrong loading the to-do</string>
    <string name="task_form_fetch_parent_task_error">Something went wrong loading to-do info</string>
    <string name="task_form_save_error_edit">Something went wrong editing the to-do</string>
    <string name="task_form_save_error_new">Something went wrong adding the to-do</string>
    <string name="task_form_title_edit">Edit To-do</string>
    <string name="task_form_title_new">New To-do</string>
    <string name="task_recurrence_form_title">Repetition</string>
    <string name="task_search_empty">No matching to-dos</string>
    <string name="task_search_error">Something went wrong searching for to-dos</string>
    <string name="task_search_title">Search to-dos</string>
    <string name="task_search_title_bottom_bar">Search</string>
    <string name="tasks_label">To-dos</string>
    <string name="time_picker_dialog_title">Select time</string>
    <string name="time_picker_switch_to_dial_mode">Switch to clock input mode</string>
    <string name="time_picker_switch_to_input_mode">Switch to text input mode</string>
    <string name="unmark_done_button">Unmark done</string>
    <string name="view_task_button">View to-do</string>
</resources>
