...
import androidx.compose.ui.Modifier
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.tooling.preview.Preview
import io.github.evaogbe.diswantin.ui.theme.DiswantinTheme
import io.github.evaogbe.diswantin.ui.theme.IconSizeXl

const val PendingLayoutTestTag = "PendingLayoutTestTag"

@Composable
fun PendingLayout(modifier: Modifier = Modifier) {
    Box(
        modifier = modifier
            .testTag(PendingLayoutTestTag)
...
